# Compilers

./: CMakeLists.txt  MainController.cpp  MainController.h  README.md  main.cpp
lexical analyzer/: .gitignore  CMakeLists.txt  LexicalController.cpp  LexicalController.h  SymbolTable.cpp  SymbolTable.h  main.cpp
lexical analyzer/Automata/: DFATransformer.cpp  NFAGenerator.h  ReducedDFA.cpp  ReducedDFA.h
lexical analyzer/automata/: DFANode.cpp  DFANode.h  DFATransformer.cpp  DFATransformer.h  EdgeLabel.cpp  EdgeLabel.h  Helper.cpp  Helper.h  MinimizationTest.cpp  NFA.cpp  NFA.h  NFAGenerator.cpp  NFAGenerator.h  NFAOperations.cpp  NFAOperations.h  ReducedDFA.cpp  ReducedDFA.h  State.cpp  State.h  Tokenizer.cpp  Tokenizer.h  Transition.cpp  Transition.h  TransitionTable.cpp  TransitionTable.h  Utilities.cpp  Utilities.h
lexical analyzer/file services/: FileHandler.h  FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h  SourceProgramReader.cpp  SourceProgramReader.h
lexical analyzer/file_services/: FileHandler.h  FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h  GrammarReader.cpp  GrammarReader.h  SourceProgramReader.cpp  SourceProgramReader.h
lexical_analyzer/: CMakeLists.txt  ErrorHandler.cpp  ErrorHandler.h  LexicalController.cpp  LexicalController.h  SymbolTable.h
lexical_analyzer/automata/: DFANode.cpp  DFANode.h  DFATransformer.cpp  Helper.cpp  Helper.h  MinimizationTest.cpp  NFAGenerator.h  NFAOperations.cpp  ReducedDFA.cpp  ReducedDFA.h  State.h  Tokenizer.cpp
lexical_analyzer/file_services/: FileReader.cpp  FileWriter.h  GrammarReader.h  SourceProgramReader.cpp  SourceProgramReader.h
parser/: GrammarNormalizer.cpp  GrammarNormalizer.h  NonTerminal.cpp  NonTerminal.h  ParserController.cpp  ParserController.h  ParserStack.cpp  ParserStack.h  ParserTable.cpp  ParserTable.h  TestParseTableStack.cpp  Utility.cpp  Utility.h
parser/printing/: table_printer.cpp  table_printer.h
test_cases/: Example_1.txt  Example_2.txt  Example_3.txt  Sheet_4_Number_2 (copy)  T1_Immediate_Left_Recursion.txt  T3_Non_Immediate_Left_Recursion (2).txt  T4_Left_Factoring (1)  T5_Left_Factoring (2)  main_grammar.txt  sheets.txt
test_cases/Sheets/: Sheet_4_Number_1.txt  Sheet_4_Number_3.txt
