cmake_minimum_required(VERSION 3.9)
project(Compilers)

set(CMAKE_CXX_STANDARD 11)

add_executable(Compilers
        lexical_analyzer/automata/DFANode.cpp
        lexical_analyzer/automata/DFANode.h
        lexical_analyzer/automata/DFATransformer.cpp
        lexical_analyzer/automata/DFATransformer.h
        lexical_analyzer/automata/EdgeLabel.cpp
        lexical_analyzer/automata/EdgeLabel.h
        lexical_analyzer/automata/Helper.cpp
        lexical_analyzer/automata/Helper.h
        lexical_analyzer/automata/NFA.cpp
        lexical_analyzer/automata/NFA.h
        lexical_analyzer/automata/NFAGenerator.cpp
        lexical_analyzer/automata/NFAGenerator.h
        lexical_analyzer/automata/NFAOperations.cpp
        lexical_analyzer/automata/NFAOperations.h
        lexical_analyzer/automata/ReducedDFA.cpp
        lexical_analyzer/automata/ReducedDFA.h
        lexical_analyzer/automata/State.cpp
        lexical_analyzer/automata/State.h
        lexical_analyzer/automata/Tokenizer.cpp
        lexical_analyzer/automata/Tokenizer.h
        lexical_analyzer/file_services/FileHandler.h
        lexical_analyzer/file_services/FileReader.cpp
        lexical_analyzer/file_services/FileReader.h
        lexical_analyzer/file_services/FileWriter.cpp
        lexical_analyzer/file_services/FileWriter.h
        lexical_analyzer/file_services/GrammarReader.cpp
        lexical_analyzer/file_services/GrammarReader.h
        lexical_analyzer/file_services/SourceProgramReader.cpp
        lexical_analyzer/file_services/SourceProgramReader.h
        lexical_analyzer/ErrorHandler.cpp
        lexical_analyzer/ErrorHandler.h
        lexical_analyzer/LexicalController.cpp
        lexical_analyzer/LexicalController.h
        lexical_analyzer/SymbolTable.cpp
        lexical_analyzer/SymbolTable.h
        parser/GrammarNormalizer.cpp
        parser/GrammarNormalizer.h
        parser/NonTerminal.cpp
        parser/NonTerminal.h
        parser/ParserController.cpp
        parser/ParserController.h
        parser/Utility.cpp
        parser/Utility.h
        main.cpp)
